--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.username %}
-                    <li><a href="">{{ request.session.userName }}</a></li>
+                    <li><a href=""><span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp;&nbsp;{{ request.session.userName }}</a></li>
                     <li><a href="/logoff/">注销</a></li>
                 {% else %}
                     <li><a href="/login/">登录</a></li>
@@ -38,6 +38,7 @@
 </nav>
 {% block Content %}
 <div class="container-fluid" style="margin-top: 70px">
+{% csrf_token %}
     <div class="row">
         <div class="col-md-2 sidebar">
             <div id="user_stats">
@@ -71,16 +72,6 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td><input type="checkbox"></td>
-                        <td>第一次调查问卷</td>
-                        <td>Linux脱产(8期)</td>
-                        <td>0/12</td>
-                        <td><a href="">编辑问卷</a></td>
-                        <td>/student/evaluate/classes_id/questionnaire_id</td>
-                        <td><a href="">查看评分</a></td>
-                        <td><a href="">删除</a></td>
-                    </tr>
                     {% for questionnaire in questionnaire_list %}
                         <tr>
                             <td><input type="checkbox"></td>
@@ -90,7 +81,7 @@
                             <td><a href="/editqs/">编辑问卷</a></td>
                             <td>/student/evaluate/{{ questionnaire.cls.id }}/{{ questionnaire.id }}</td>
                             <td><a href="">查看评分</a></td>
-                            <td><a href="">删除</a></td>
+                            <td><button class="btn btn-block btn-info del_qs"  qs_id="{{ questionnaire.id }}">删除</button></td>
                         </tr>
                     {% endfor %}
 
@@ -114,10 +105,11 @@
             </div>
             <div class="modal-body">
                 <form class="form-horizontal col-md-offset-1">
+                {% csrf_token %}
                     <div class="form-group ">
                         <label for="question" class="col-sm-2 col-md-2 control-label">问卷名称</label>
                         <div class="col-sm-10 col-md-6">
-                            <input type="text" class="form-control" id="question">
+                            <input type="text" class="form-control" id="question" name="question">
                         </div>
                     </div>
                     <div class="form-group">
@@ -128,13 +120,12 @@
                                     <option value="{{ cls.id }}">{{ cls.title }}</option>
                                 {% endfor %}
                             </select>
-
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                            <button type="button" class="btn btn-primary " id="save">保存</button>
+                            <button type="submit" class="btn btn-primary " id="save">保存</button>
                         </div>
                     </div>
                 </form>
