--- a/templates/editqs.html
+++ b/templates/editqs.html
@@ -1,11 +1,106 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>编辑问卷问题</title>
-</head>
-<body>
-<h2></h2>
+{% extends 'index.html' %}
+{% block title %}
+    编辑问卷问题
+{% endblock %}
+{% block link %}
+    <link rel="stylesheet" href="/static/css/addQuestion.css">
+{% endblock %}
+{% block Content %}
 
-</body>
-</html>
+    <div class="panel ">
+        <div class="panel-body">
+            <div class="pull-right">
+                <button type="button" class="btn btn-success" id="addQuestion">添加</button>
+                <button type="button" class="btn btn-primary">保存</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel">
+        <div class="panel-body" id="Questions">
+            <div class="well well-lg">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="functiondel(this)"><span
+                        aria-hidden="true">&times;</span>
+                </button>
+                <h4 style="color:#777">问题1：</h4>
+
+                <form class="form-horizontal">
+
+                    <div class="form-group">
+
+                        <label for="inputPassword" class="col-sm-2 col-md-2 control-label">问题：</label>
+
+                        <div class="col-md-2">
+                                <textarea name="" id="" cols="5" rows="2" class="form-control"
+                                          style="width: 600px"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword" class="col-sm-2 control-label">类型：</label>
+                        <div class="col-md-3">
+                            <select name="type_id" class="form-control types" style="width: 250px" onchange="selectchange(this)">
+                                <option value="1">打分(1~10分)</option>
+                                <option value="2">单选</option>
+                                <option value="3">建议</option>
+                            </select>
+
+                        </div>
+                        <ul class="nav col-md-2 myhite ">
+                            <li role="presentation" class="active addSelect"><a>
+                                <span class="glyphicon glyphicon-plus " aria-hidden="true"></span>&nbsp;&nbsp;添加选项</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <ul>
+                        <li>内容: <input type="text" class="form-control" style="width: 200px"></li>
+                        <li>分值: <input type="text" class="form-control" style="width: 400px"></li>
+                    </ul>
+                </form>
+            </div>
+            <div class="well well-lg">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="functiondel(this)"><span
+                        aria-hidden="true">&times;</span>
+                </button>
+                <h4 style="color:#777">问题1：</h4>
+
+                <form class="form-horizontal">
+
+                    <div class="form-group">
+
+                        <label for="inputPassword" class="col-sm-2 col-md-2 control-label">问题：</label>
+
+                        <div class="col-md-3">
+                                <textarea name="" id="" cols="5" rows="2" class="form-control"
+                                          style="width: 600px"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword" class="col-sm-2 col-md-2 control-label">类型：</label>
+                        <div class="col-md-3">
+                            <select name="type_id" class="form-control types" style="width: 250px" onchange="selectchange(this)">
+                                <option value="1">打分(1~10分)</option>
+                                <option value="2" selected>单选</option>
+                                <option value="3">建议</option>
+                            </select>
+                        </div>
+
+                        <ul class="nav col-md-2">
+                            <li role="presentation" class="active addSelect">
+                                <a><span class="glyphicon glyphicon-plus " aria-hidden="true" ></span>&nbsp;&nbsp;添加选项</a>
+                            </li>
+                        </ul>
+
+
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </div>
+
+{% endblock %}
+
+{% block script %}
+    <script src="/static/js/addQuestion.js"></script>
+{% endblock %}
+
