编辑问卷页面完成,保存数据功能未实现

--- a/static/css/addQuestion.css
+++ b/static/css/addQuestion.css
@@ -1,3 +1,20 @@
-.myhite{
+.myhite {
     display: none;
 }
+
+/*ul {*/
+    /*padding: 0;*/
+    /*list-style: none;*/
+    /*counter-reset: sectioncounter*/
+/*}*/
+
+/*ul > li:before {*/
+    /*content: '问题' counter(sectioncounter) ':';*/
+    /*counter-increment: sectioncounter;*/
+    /*font-size: 18px;*/
+    /*color: #d4d4d4;*/
+/*}*/
+
+/*ul > li:nth-of-type(odd) {*/
+    /*background-color: #f9f9f9;*/
+/*}*/
