--- a/static/css/addQuestion.css
+++ b/static/css/addQuestion.css
@@ -2,19 +2,21 @@
     display: none;
 }
 
-/*ul {*/
-    /*padding: 0;*/
-    /*list-style: none;*/
-    /*counter-reset: sectioncounter*/
-/*}*/
+ol {
+    padding: 0;
+    list-style: none;
+    counter-reset: sectioncounter
+}
 
-/*ul > li:before {*/
-    /*content: '问题' counter(sectioncounter) ':';*/
-    /*counter-increment: sectioncounter;*/
-    /*font-size: 18px;*/
+ol > li:before {
+    content: '问题' counter(sectioncounter) ':';
+    counter-increment: sectioncounter;
+    font-size: 18px;
     /*color: #d4d4d4;*/
-/*}*/
+    color: #777;
 
-/*ul > li:nth-of-type(odd) {*/
-    /*background-color: #f9f9f9;*/
-/*}*/
+}
+
+ol > li:nth-of-type(odd) {
+    background-color: #f9f9f9;
+}
